finish edit